--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "title": "MyRecipes",
+    "title": "MyRecipes - TFG",
     "description": "App to manage and plan personalised recipes created with Flutter, Spring Boot and Supabase.",
     "image": "",
     "url": "",
@@ -14,5 +14,21 @@
     "image": "/project_photo.png",
     "url": "https://jp-multitarea.vercel.app/",
     "github": "https://jp-multitarea.vercel.app/"
+  },
+  {
+    "id": 3,
+    "title": "Gangazon Fichajes",
+    "description": "Mobile app to manage time and attendance of employees. Users are able to manage their vacations, work hours, upload documents and more. Built with Flutter and Supabase.",
+    "image": "/project_photo.png",
+    "url": "",
+    "github": ""
+  },
+  {
+    "id": 4,
+    "title": "Valencia Outdoor",
+    "description": "Multiplattform app for management app of a outdoor advertising company. Built with Flutter and Supabase.",
+    "image": "/project_photo.png",
+    "url": "",
+    "github": ""
   }
 ]
