--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -27,7 +27,7 @@
     "id": 4,
     "title": "Valencia Outdoor",
     "description": "Multiplattform app for management app of a outdoor advertising company. Built with Flutter and Supabase.",
-    "image": "/project_photo.png",
+    "image": "/Captura de pantalla 2025-09-12 a las 11.44.18.png",
     "url": "",
     "github": ""
   }
