logos utilizados para la portada de los proyectos

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "MyRecipes - TFG",
     "description": "App to manage and plan personalised recipes created with Flutter, Spring Boot and Supabase. Features include recipe creation, meal planning, ingredient management, and user authentication.",
-    "image": "/project_photo.png",
+    "image": "/projects/logo_myrecipes.png",
     "images": [
       "/project_photo.png",
       "/project_photo.png"
@@ -15,19 +15,19 @@
     "id": 2,
     "title": "JPMultitarea",
     "description": "Landing page for a company that offers multiple services, built with React and Tailwind. Responsive design with modern animations and contact forms.",
-    "image": "/project_photo.png",
+    "image": "/projects/Logo_jp.png",
     "images": [
       "/project_photo.png",
       "/project_photo.png"
     ],
     "url": "https://jp-multitarea.vercel.app/",
-    "github": "https://jp-multitarea.vercel.app/"
+    "github": ""
   },
   {
     "id": 3,
     "title": "Gangazon Fichajes",
     "description": "Mobile app to manage time and attendance of employees. Users are able to manage their vacations, work hours, upload documents and more. Built with Flutter and Supabase.",
-    "image": "/project_photo.png",
+    "image": "/projects/logo_gangazon-removebg-preview.png",
     "images": [
       "/project_photo.png",
       "/project_photo.png"
@@ -39,7 +39,7 @@
     "id": 4,
     "title": "Valencia Outdoor",
     "description": "Multiplatform app for management of an outdoor advertising company. Built with Flutter and Supabase with real-time updates and automated reporting creation.",
-    "image": "/Captura de pantalla 2025-09-12 a las 11.44.18.png",
+    "image": "/projects/logo-valencia-outdoor.png.webp",
     "images": [
       "/Captura de pantalla 2025-09-12 a las 11.44.18.png",
       "/project_photo.png"
